we are done for now

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ authors = [
 dependencies = [
   "fastmcp>=0.3.0",
   "httpx>=0.27",
-  "pydantic>=2.7"
+  "pydantic>=2.7",
+  "python-dotenv>=1.0"
 ]
 
 [project.optional-dependencies]
@@ -25,6 +26,7 @@ dev = [
 
 [project.scripts]
 bigip-mcp-server = "bigip_mcp_server.__main__:main"
+bigip-mcp-harness = "bigip_mcp_server.harness:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
